fix wordbreak in post titles

--- a/src/assets/scss/components/_widgets.scss
+++ b/src/assets/scss/components/_widgets.scss
@@ -594,3 +594,58 @@
 		}
 	}
 }
+
+//Modern Tribe Events Calendar Widgets
+.tribe-events-list-widget {
+	//background: $gray;
+	//padding: 1rem;
+	background: url('../images/blueInWhite_corner1.svg') no-repeat right bottom;
+    background-color: $white;
+    background-size: 2.666666666666667rem auto;	
+	border: .06667rem solid $blue;
+	border-bottom: none;
+	border-top: none;
+	box-shadow: 0 0.4rem 0 0 $blue;
+	.widget_title {
+		background: $blue;
+		h4, h5 {
+			font-size: 1.25rem;
+			@include widget-title;
+			text-align: center;
+			color: $white;
+			margin-bottom: 0;
+		}
+		padding: .75rem;
+	}
+	.tribe-list-widget {
+		padding-top: 1rem;
+	}
+	.tribe-events-list-widget-events {
+		h4.tribe-event-title {
+			font-size: 1.125rem;
+		}
+		.tribe-event-duration {
+			span.tribe-event-date-start, span.tribe-event-time {
+				font-family: $font-stack-semibold;
+				font-weight: $font-stack-semibold-weight;
+			}
+			span.timezone {
+				display: none;
+			}
+		}
+	}
+	.tribe-events-widget-link a {
+		padding: 1rem !important;
+	    text-transform: uppercase;
+	    font-family: "gentona-semibold", "Helvetica Neue", Roboto, sans-serif;
+	    font-weight: 600;
+	    font-size: .9rem;
+	    &::after{
+			font-family: "Font Awesome 5 Free", "gentona-semibold", "Helvetica Neue", Roboto, sans-serif;
+		    padding-left: .2rem;
+		    font-weight: 900;
+		    content: "\f138";
+	    }
+	}
+
+}
